# vpython-wx

./: .cproject  .gitignore  .project  .travis.yml  Boost_OSX_Makefile.mak  DEVELOP.md  HACKING.txt  INSTALL.txt  MAC-OSX.md  MAC-OSX.txt  MANIFEST.in  MSWINDOWS.txt  MakeVPython2.6.iss  MakeVPython2.7-32bit.iss  MakeVPython2.7-64bit.iss  MakeVPython2.7.iss  MakeVPython3.1.iss  MakeVPython3.2-64bit.iss  MakeVPython3.2.iss  Makefile.am  README.md  acinclude.m4  authors.txt  autogen.sh  compilevisual.py  configure.ac  ez_setup.py  get_vpy_includes.py  requirements.txt  requirements_test.txt  setup.cfg  setup.cfg.example  setup.py
VCBuild/: .gitignore  VCBuild.txt  cvisual27-32bit.vcproj  cvisual27.sln  cvisual27.vcproj  cvisual32.vcproj
VCBuild/cvisual/release-obj/: BuildLog.htm  cvisual.exp  cvisual.lib  mt.dep  vc90.idb
docs/: Makefile.am  index.html
docs/visual/: VisualIntro.html  arrow.html  box.html  color.html  cone.html  controls.html  convex.html  curve.html  cylinder.html  defaults.html  delete.html  display.html  ellipsoid.html  extrusion.html  extrusion_overview.py  faces.html  factorial.html  files.html  float.html  frame.html  graph.html  helix.html  index.html  keyboard.html  label.html  lights.html  materials.html  mouse.html  mouse_click.html  mouse_drag.html  new_features.html  options.html  paths.html  points.html  primitives.html  pyramid.html  rate.html  ring.html  rotation.html  shapes.html  (+4 more)
docs/visual/Templates/: template.dwt
examples/: Makefile.am  bounce.py  colorsliders.py  conch.py  controlstest.py  convex.py  crystal.py  doublependulum.py  drape.py  extrusion_examples.py  extrusion_overview.py  faces_cone.py  faces_heightfield.py  graphtest.py  lathe.py  lorenz.py  mandelbrot.py  medusa.py  planar.py  stars.py  texttest.py  tictacdat.py  toroid.py  toroid_drag.py  wave.py
include/: arrow.hpp  axial.hpp  box.hpp  cone.hpp  config.h  config.h.in  cylinder.hpp  display_kernel.hpp  ellipsoid.hpp  frame.hpp  label.hpp  light.hpp  material.hpp  mouse_manager.hpp  mouseobject.hpp  primitive.hpp  pyramid.hpp  rectangular.hpp  renderable.hpp  ring.hpp  sphere.hpp  text.hpp  vpython-config.h  wrap_gl.hpp
include/GL/: glext.h
include/gtk2/: font_renderer.hpp  text_adjust.hpp
include/mac/: font_renderer.hpp  text_adjust.hpp
include/python/: arrayprim.hpp  convex.hpp  curve.hpp  extrusion.hpp  faces.hpp  num_util.hpp  numeric_texture.hpp  points.hpp  scalar_array.hpp  slice.hpp  vector_array.hpp  wrap_vector.hpp
include/util/: atomic_queue.hpp  displaylist.hpp  errors.hpp  extent.hpp  gl_enable.hpp  gl_extensions.hpp  gl_free.hpp  icososphere.hpp  quadric.hpp  rate.hpp  rgba.hpp  shader_program.hpp  sorted_model.hpp  texture.hpp  timer.hpp  tmatrix.hpp  vector.hpp
include/win32/: font_renderer.hpp  text_adjust.hpp
src/: Makefile.in
src/core/: arrow.cpp  axial.cpp  box.cpp  cone.cpp  cylinder.cpp  display_kernel.cpp  ellipsoid.cpp  frame.cpp  label.cpp  light.cpp  material.cpp  mouse_manager.cpp  mouseobject.cpp  primitive.cpp  pyramid.cpp  rectangular.cpp  renderable.cpp  ring.cpp  sphere.cpp  text.cpp
src/core/util/: atomic_queue.cpp  displaylist.cpp  errors.cpp  extent.cpp  gl_extensions.cpp  gl_free.cpp  icososphere.cpp  quadric.cpp  rgba.cpp  shader_program.cpp  texture.cpp  tmatrix.cpp  vector.cpp
src/gtk2/: apt-get-packages.sh  font_renderer.cpp  get_proc_address.cpp  makefile  site-packages.pth
src/mac/: get_proc_address.cpp  mac_font_renderer.cpp  makefile
src/mac/PackageMaker/: .gitignore  InstallReadme.txt  Visual5_Python2.6_welcome.rtf  Visual5_Python3.1_welcome.rtf  Visual5_welcome.rtf  Visual6_welcome.rtf  buildPackage.py  buildPackage.sh  copyFromInstalled.py  dumb_uninstall.sh  makeDependencyLinks.sh  packaging.txt  vpy_uninstall.sh
src/mac/PackageMaker/CVS/: Entries  Repository
src/mac/PackageMaker/VPython-Python2.6.pmdoc/: 01visual-contents.xml  01visual.xml  02vidle-contents.xml  02vidle.xml  03vpython-contents.xml  03vpython.xml  04numpy-contents.xml  04numpy.xml  05numpy-contents.xml  05numpy.xml  06ttfquery-contents.xml  06ttfquery.xml  07fonttools-contents.xml  07fonttools.xml  08polygon-contents.xml  08polygon.xml  09polygon-contents.xml  09polygon.xml  10fonttools-contents.xml  10fonttools.xml  11fonttools-contents.xml  11fonttools.xml  12ttfquery-contents.xml  12ttfquery.xml  index.xml
src/mac/PackageMaker/VPython-Python2.6.pmdoc/CVS/: Entries  Repository
src/mac/PackageMaker/VPython-Python2.7.pmdoc/: 01vidle-contents.xml  01vidle.xml  02numpy-contents.xml  02numpy.xml  03numpy-contents.xml  03numpy.xml  04ttfquery-contents.xml  04ttfquery.xml  05fonttools-contents.xml  05fonttools.xml  06polygon-contents.xml  06polygon.xml  07polygon-contents.xml  07polygon.xml  08fonttools-contents.xml  08fonttools.xml  09fonttools-contents.xml  09fonttools.xml  10ttfquery-contents.xml  10ttfquery.xml  11vpython-contents.xml  11vpython.xml  12vis-contents.xml  12vis.xml  13visual-contents.xml  13visual.xml  index.xml
src/mac/PackageMaker/VPython-Python2.7.pmdoc/CVS/: Entries  Repository
src/mac/PackageMaker/VPython-Python3.1.pmdoc/: 01visual-contents.xml  01visual.xml  02vidle-contents.xml  02vidle.xml  03vpython-contents.xml  03vpython.xml  04numpy-contents.xml  04numpy.xml  05numpy-contents.xml  05numpy.xml  06ttfquery-contents.xml  06ttfquery.xml  07fonttools-contents.xml  07fonttools.xml  08polygon-contents.xml  08polygon.xml  09polygon-contents.xml  09polygon.xml  10fonttools-contents.xml  10fonttools.xml  11fonttools-contents.xml  11fonttools.xml  12ttfquery-contents.xml  12ttfquery.xml  13vis-contents.xml  13vis.xml  index.xml
src/mac/PackageMaker/VPython-Python3.1.pmdoc/CVS/: Entries  Repository  Root
src/python/: arrayprim.cpp  convex.cpp  curve.cpp  cvisualmodule.cpp  extrusion.cpp  faces.cpp  num_util.cpp  numeric_texture.cpp  points.cpp  scalar_array.cpp  slice.cpp  vector_array.cpp  wrap_arrayobjects.cpp  wrap_display_kernel.cpp  wrap_primitive.cpp  wrap_rgba.cpp  wrap_vector.cpp
src/win32/: font_renderer.cpp  get_proc_address.cpp
tests/: test_installation.py
